--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passwordx",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Use the cli to generate strong passwords or add them to nodejs projects",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -22,6 +22,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "tslib": "^2.3.1",
     "yargs": "^17.0.1"
   },
   "devDependencies": {
