--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passwordx",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Use the cli to generate strong passwords or add them to nodejs projects",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.3.5"
   }
 }
