--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "passwordx",
-  "version": "1.1.3",
+  "private": false,
+  "version": "1.2.0",
   "description": "Use the cli to generate strong passwords or add them to nodejs projects",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -10,28 +11,28 @@
   "scripts": {
     "build": "tsc"
   },
-  "homepage": "https://github.com/oceanroleplay/passwordx",
+  "homepage": "https://github.com/samarmeena/passwordx",
   "bugs": {
-    "url": "https://github.com/oceanroleplay/passwordx/issues",
-    "email": "indianoceanroleplay@gmail.com"
+    "url": "https://github.com/samarmeena/passwordx/issues",
+    "email": "vijayymmeena@gmail.com"
   },
-  "author": "oceanroleplay <indianoceanroleplay@gmail.com> ",
+  "author": "Vijay Meena <vijayymmeena@gmail.com> (https://github.com/samarmeena)",
   "funding": {
     "type": "individual",
-    "url": "https://iorp.in/donate"
+    "url": "https://paypal.me/vijayxmeena"
   },
   "license": "MIT",
   "dependencies": {
-    "tslib": "^2.3.1",
-    "yargs": "^17.0.1"
+    "tslib": "^2.6.2",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@types/node": "^16.3.0",
-    "@types/yargs": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.3.5"
+    "@types/node": "^20.11.30",
+    "@types/yargs": "^17.0.32",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "eslint": "^8.57.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
